# demo-ios-ai-chat

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
cmake/: ac_dep.cmake
demo-ai-chat/: CMakeLists.txt  ChatInference.swift  ChatScreenView.swift  DownloadManager.swift  ModelSelectorView.swift
demo-llama-chat/: CMakeLists.txt  ChatInference.swift  ContentView.swift  DownloadManager.swift  LlamaChatApp.swift  ModelRegistry.swift  TypingIndicatorView.swift  app.plist.in
toolchains/: iOS.cmake
